--- a/config/ann_model_runner_config.json
+++ b/config/ann_model_runner_config.json
@@ -8,7 +8,7 @@
     "batch_size"            : 1000,
 
     "data_reader_uri"       : "read_numerai.py",
-    "data_uri"              : "../numerai/numerai_datasets_20160619/",
+    "data_uri"              : "data/numerai_datasets_20160619/",
     "log_uri"				: "log/",
     "results_uri"			: "results/"
 }
